--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -1,6 +1,29 @@
 template(name='dao')
     .ui.stackable.grid
         .row
+            .sixteen.wide.column
+                // a.icon.ui.big.circular.icon.button.zoomer(href='/')
+                //     i.large.yin.yang.grey.icon
+                // unless viewing_doc
+                if selected_tags
+                    // if many_tags
+                    //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
+                    //         i.remove.icon
+                    each selected_tags
+                        +unselect_tag
+                .ui.left.icon.transparent.big.input(class=thinking_class)
+                    if skv_is 'thinking' true
+                        i.big.yin.yang.loading.icon
+                    else 
+                        i#clear_tags.link.yin.yang.big.icon(class=thinking_class)
+                    // i.search.grey.icon
+                    input.search_title(type='text' autofocus='' placeholder=doc_count)
+                each tag_results
+                    +tag_selector
+                // .ui.header 
+                //     i.smile.large.grey.icon
+                //     |emotion
+                // .spacer
             .four.wide.right.aligned.column.scrolling
                 // .ui.large.basic.label(title='results') #{doc_count} results
                 // .ui.basic.circular.button(title='when')
@@ -21,7 +44,7 @@ template(name='dao')
                 +skve k='view_mode' v='stack' l='stack' i='code'
                 +skve k='view_mode' v='image' l='image' i='image'
                 +skve k='view_mode' v='github' l='github' i='github'
-                +skve k='view_mode' v='porn' l='porn' i='mercury'
+                // +skve k='view_mode' v='porn' l='porn' i='mercury'
                 +skve k='view_mode' v='video' l='youtube' i='youtube'
                 // div
                 .ui.inline.grey.header 
@@ -147,37 +170,41 @@ template(name='dao')
                             each subreddit_results
                                 +select_subreddit
                     else if skv_is 'main_section' 'stack'
-                        // .ui.inline.header 
-                        //     i.code.large.icon
-                        //     |stack
-                        // .ui.button.call_stack
-                        //     |call
-                        // .ui.input
-                        //     input.search_stack(type='text')
-                        each stack_docs
-                            .ui.header !{title}
-                            each tags 
-                                a.ui.basic.pointer.label.add_stack_tag #{this}
-                            .ui.label answered #{is_answered}
-                            .ui.label 
-                                i.eye.icon
-                                |#{view_count}
-                            .ui.label protected_date #{protected_date}
-                            .ui.label accepted_answer_id #{accepted_answer_id}
-                            .ui.label #{answer_count} answers
-                            .ui.label score #{score}
-                            .ui.label last_activity_date #{last_activity_date}
-                            .ui.label creation_date #{creation_date}
-                            .ui.label #{_when}
-                            a(href=link target='_window')
-                                |#{link}
-                            with owner
-                                .ui.compact.segment
-                                    .ui.header #{display_name}
-                                    img.ui.small.centered.image(src=profile_image)
-                                    .ui.label reputation #{reputation}
-                                    .ui.label user_id #{user_id}
-                                    .ui.label user_type #{user_type}
+                        +skve k='stack_view' v='cards' l='cards' i='squared-menu' ionly=true
+                        +skve k='stack_view' v='list' l='list' i='list' ionly=true
+                        if skv_is 'stack_view' 'list'
+                            .ui.large.list 
+                                each stack_docs
+                                    .ui.small.header !{title}
+                        else
+                            .ui.stackable.cards
+                                each stack_docs
+                                    .ui.card 
+                                        .content
+                                            .ui.header !{title}
+                                            each tags 
+                                                a.ui.basic.pointer.label.add_stack_tag #{this}
+                                            .ui.label answered #{is_answered}
+                                            .ui.label 
+                                                i.eye.icon
+                                                |#{view_count}
+                                            .ui.label protected_date #{protected_date}
+                                            .ui.label accepted_answer_id #{accepted_answer_id}
+                                            .ui.label #{answer_count} answers
+                                            .ui.label score #{score}
+                                            .ui.label qid #{question_id}
+                                            .ui.label last_activity_date #{last_activity_date}
+                                            .ui.label creation #{creation_date}
+                                            .ui.label #{_when}
+                                            a(href=link target='_window')
+                                                |#{link}
+                                            with owner
+                                                .ui.compact.segment
+                                                    .ui.inline.header #{display_name}
+                                                    img.ui.tiny.inline.centered.image(src=profile_image)
+                                                    .ui.label reputation #{reputation}
+                                                    .ui.label user_id #{user_id}
+                                                    .ui.label user_type #{user_type}
                     else if skv_is 'main_section' 'sources'
                         .ui.inline.header 
                             i.database.large.icon
@@ -271,29 +298,6 @@ template(name='dao')
                         .ui.cards
                             each wiki_docs
                                 +reddit_doc
-            .sixteen.wide.column
-                // a.icon.ui.big.circular.icon.button.zoomer(href='/')
-                //     i.large.yin.yang.grey.icon
-                // unless viewing_doc
-                if selected_tags
-                    // if many_tags
-                    //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
-                    //         i.remove.icon
-                    each selected_tags
-                        +unselect_tag
-                .ui.left.icon.transparent.big.input(class=thinking_class)
-                    if skv_is 'thinking' true
-                        i.big.yin.yang.loading.icon
-                    else 
-                        i#clear_tags.link.yin.yang.big.icon(class=thinking_class)
-                    // i.search.grey.icon
-                    input.search_title(type='text' autofocus='' placeholder=doc_count)
-                each tag_results
-                    +tag_selector
-                // .ui.header 
-                //     i.smile.large.grey.icon
-                //     |emotion
-                // .spacer
                 
                     
                 
