nav back, router back, view_mode icon in search input with loading animation

--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -39,33 +39,33 @@ head
         gtag('js', new Date());
         gtag('config', 'UA-156965333-1');
 
-body
-    // +nav
-    +dao
+// body
+//     +nav
+//     +dao
 //     .adventure-vidm(class=currentUser.invert_class data-poster-url='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-poster-00001.jpg', data-video-urls='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.mp4,https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.webm', data-autoplay='true', data-loop='true', data-wf-ignore='true')
 //         video(autoplay='', loop='', style='background-image:url("https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-poster-00001.jpg")', muted='', playsinline='', data-wf-ignore='true', data-object-fit='cover')
 //             source(src='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.mp4', data-wf-ignore='true')
 //             source(src='https://uploads-ssl.webflow.com/5d4a237a79c912a1ef797ef2/5d64a7daca4f1a1c19bc8fae_galaxy bg loop-transcode.webm', data-wf-ignore='true')
 
-// template(name='layout')
-//     // if currentUser
-//     // .ui.bottom.attached.pushable.segment
-//     // .invert
-//     // +nav
-//     // #main_area.scrolling.global_container
+template(name='layout')
+    // if currentUser
+    // .ui.bottom.attached.pushable.segment
+    // .invert
+    +nav
+    #main_area.global_container
 
-//     // .ui.bottom.attached.pushable.segment
-//     //     +leftbar
-//     //     +rightbar
+    .ui.bottom.attached.pushable.segment
+        +leftbar
+        +rightbar
                 
-//     //     // #main_area.global_container.pusher.invert
-//     //     #main_area.global_container.pusher(class=currentUser.invert_class)
-//     +yield
-//         // .scrolling
-//         // if currentUser
-//         //     +bottom_nav
-//     // +chatpop
-//     // +footer
+        // #main_area.global_container.pusher.invert
+        #main_area.global_container.pusher(class=currentUser.invert_class)
+            +yield
+        // .scrolling
+        // if currentUser
+        //     +bottom_nav
+    // +chatpop
+    // +footer
 
 
 
