--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -168,10 +168,10 @@ html.ios body {
 
 
 #iron-router-progress.spinner:before {
-	border-color : purple;
+	border-color : blue;
 }
 #iron-router-progress {
-	background-color : purple;
+	background-color : blue;
 	box-shadow       : 0 0 5px grey;
 }
 
