--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -16,8 +16,8 @@ template(name='nav')
                     a.icon.zoomer.pointer.item.add(title='add')
                         i.large.plus.icon
                 if currentUser
-                    // a.pointer.zoomer.item.toggle_friends(href="#" class=alert_toggle_class title='friends')
-                    //     i.large.users.icon
+                    a.pointer.zoomer.item.toggle_friends(href="#" class=alert_toggle_class title='friends')
+                        i.large.users.icon
                     if connected
                         if unread_count
                             a.pointer.zoomer.item.alerts(href="#" class=alert_toggle_class)
@@ -38,13 +38,13 @@ template(name='nav')
                     // |{{money_format currentUser.points}}c
                     |#{currentUser.points}p
                     |&nbsp;
-                    // if currentUser.profile_image_id
-                    //     img.ui.avatar.zoomer.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                    // else 
-                    //     i.large.user.zoomer.large.icon
+                    if currentUser.profile_image_id
+                        img.ui.avatar.zoomer.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                    else 
+                        i.large.user.zoomer.large.icon
                     strong.mobile.hidden #{currentUser.username}
-                // a.icon.large.item.zoomer.toggle_rightbar
-                //     i.bars.large.grey.icon
+                a.icon.large.item.zoomer.toggle_rightbar
+                    i.bars.large.grey.icon
             else
                 a.pointer.zoomer.item(href="/login" title='login')
                     i.large.sign.in.icon
