uncomment cloudinary settings to fix issues, bring back big profile stuff

--- a/parts/profile.jade
+++ b/parts/profile.jade
@@ -1,11 +1,11 @@
 template(name='profile')
     +nav
     .ui.bottom.attached.pushable.segment
-        +leftbar
-        +rightbar
+        // +leftbar
+        // +rightbar
         // #main_area.global_container.pusher.invert
         #main_area.global_container.pusher(class=currentUser.invert_class)
-            with user
+            with current_user
                 .ui.stackable.padded.grid
                     .four.wide.column
                         span.mobile.only
@@ -168,85 +168,85 @@ template(name='user_rentals')
 template(name='user_dashboard')
     // +user_about
     // .ui.hidden.divider
-    // .ui.stackable.four.column.grid
-        // .column
-        //     .ui.inline.header 
-        //         +icon n='deposit'
-        //         |#{total_credit_amount}p
-        //         |received
-        //         .ui.basic.label #{credit_count} credits
-        //             | ##{global_credit_count_rank}
-        //     .scrolling
-        //         each user_credits
-        //             .ui.segment
-        //                 if author.profile_image_id
-        //                     img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-        //                 .content
-        //                     .header
-        //                         strong #{amount}pt 
-        //                         |from 
-        //                         a(href="/u/#{author.username}")
-        //                             |#{author.username}
-        //                     .description
-        //                         a(href="/debit/#{_id}/view")
-        //                             |#{when}
-        //                 .content
-        //                     .description
-        //                         |#{description}
-        //                         each tags
-        //                             .ui.mini.basic.label #{this}
-        // .column
-        //     .ui.inline.spaced.header 
-        //         +icolor n='filled-sent' 
-        //         |#{total_send_amount}p
-        //         |sent
-        //         small(title='send count') (#{send_count}x)
-        //             .ui.label ##{global_send_count_rank}
-        //     div
-        //     .scrolling
-        //         each user_debits
-        //             .ui.segment
-        //                 a(href="/debit/#{_id}/view")
-        //                     if recipient.profile_image_id
-        //                         img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-        //                     .header
-        //                         strong #{amount}pt
-        //                         |#{when}
-        //                         | to 
-        //                         a(href="/u/#{recipient.username}")
-        //                             |#{recipient.username}
-        //                     .description
-        //                         |#{description}
-        //                         each tags
-        //                             .ui.mini.label #{this}
-        //                         if is_admin
-        //                             +remove_button
-        // .column
-        //     .ui.header 
-        //         // i.hand.holding.heart.icon
-        //         +icolor n='request-service'
-        //         |requests
-        //     .smallscroll
-        //         each user_requests
-        //             a(href="/request/#{_id}/view")
-        //                 .ui.segment
-        //                     .header #{point_bounty}pts: #{title}
-        //                     |#{description}
-        //                     |status: #{status}
-        //                     if complete 
-        //                         |completed by #{completer.name}
-        // .column
-        //     .ui.header 
-        //         +icolor n='calendar' cl='ui inline spaced image'
-        //         |events
-        //     .smallscroll
-        //         each user_event_tickets
-        //             a(href="/event/#{event_id}/view")
-        //                 .ui.segment
-        //                     .header #{ticket_event.title}
-        //                         |#{_author.username}
-        //                         |#{description}
-        //                         |#{when}
+    .ui.stackable.four.column.grid
+        .column
+            .ui.inline.header 
+                +icon n='deposit'
+                |#{total_credit_amount}p
+                |received
+                .ui.basic.label #{credit_count} credits
+                    | ##{global_credit_count_rank}
+            .scrolling
+                each user_credits
+                    .ui.segment
+                        if author.profile_image_id
+                            img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                        .content
+                            .header
+                                strong #{amount}pt 
+                                |from 
+                                a(href="/u/#{author.username}")
+                                    |#{author.username}
+                            .description
+                                a(href="/debit/#{_id}/view")
+                                    |#{when}
+                        .content
+                            .description
+                                |#{description}
+                                each tags
+                                    .ui.mini.basic.label #{this}
+        .column
+            .ui.inline.spaced.header 
+                +icolor n='filled-sent' 
+                |#{total_send_amount}p
+                |sent
+                small(title='send count') (#{send_count}x)
+                    .ui.label ##{global_send_count_rank}
+            div
+            .scrolling
+                each user_debits
+                    .ui.segment
+                        a(href="/debit/#{_id}/view")
+                            if recipient.profile_image_id
+                                img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                            .header
+                                strong #{amount}pt
+                                |#{when}
+                                | to 
+                                a(href="/u/#{recipient.username}")
+                                    |#{recipient.username}
+                            .description
+                                |#{description}
+                                each tags
+                                    .ui.mini.label #{this}
+                                if is_admin
+                                    +remove_button
+        .column
+            .ui.header 
+                // i.hand.holding.heart.icon
+                +icolor n='request-service'
+                |requests
+            .smallscroll
+                each user_requests
+                    a(href="/request/#{_id}/view")
+                        .ui.segment
+                            .header #{point_bounty}pts: #{title}
+                            |#{description}
+                            |status: #{status}
+                            if complete 
+                                |completed by #{completer.name}
+        .column
+            .ui.header 
+                +icolor n='calendar' cl='ui inline spaced image'
+                |events
+            .smallscroll
+                each user_event_tickets
+                    a(href="/event/#{event_id}/view")
+                        .ui.segment
+                            .header #{ticket_event.title}
+                                |#{_author.username}
+                                |#{description}
+                                |#{when}
     .ui.stackable.padded.grid
         .sixteen.wide.column
             .ui.comments
