--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -1,8 +1,8 @@
 template(name='nav')
     // a.icon.ui.big.circular.icon.button.zoomer(href='/')
     .ui.fluid.attached.borderless.inverted.menu
-        a.icon.header.item.zoomer.pointer.toggle_leftbar
-            i.bars.large.grey.icon
+        // a.icon.header.item.zoomer.pointer.toggle_leftbar
+        //     i.bars.large.grey.icon
         if connected
             a.icon.item.zoomer(href='/')
                 i.big.yin.yang.icon
@@ -43,8 +43,8 @@ template(name='nav')
                     else 
                         i.large.user.zoomer.large.icon
                     strong.mobile.hidden #{currentUser.username}
-                a.icon.large.item.zoomer.toggle_rightbar
-                    i.bars.large.grey.icon
+                // a.icon.large.item.zoomer.toggle_rightbar
+                //     i.bars.large.grey.icon
             else
                 a.pointer.zoomer.item(href="/login" title='login')
                     i.large.sign.in.icon
