--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -351,7 +351,7 @@ a.goto_article {
     z-index: 1000 !important;
     /*text-shadow: 0 20px 20px 20px rgba(50, 50, 100, 0.1) !important; */
     /*text-shadow: 0 0 3px grey !important;*/
-    filter: drop-shadow(0px 0px 5px white);    
+    /*filter: drop-shadow(0px 0px 5px white);    */
 }
 
 .zoomer:hover {
