--- a/parts/profile.jade
+++ b/parts/profile.jade
@@ -44,7 +44,7 @@ template(name='profile')
                             a.zoomer.item(href="/u/#{username}/events" class="{{isActiveRoute 'user_debits'}}")
                                 i.calendar.icon
                                 |events
-                            a.zoomer.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_debits'}}")
+                            a.zoomer.item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}")
                                 i.users.icon
                                 |friends
                             a.zoomer.item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_debits'}}")
@@ -103,43 +103,43 @@ template(name='profile')
                                     .content
                                         .header #{username}
                     .twelve.wide.column 
-                        .ui.dropdown
-                            span.text dropdown
-                            i.dropdown.icon
-                            .menu 
-                                +skve k='limit' v=1 l='1'
-                                +skve k='limit' v=10 l='10'
-                                .item 1
-                                .item 5
-                                .item 10
-                                .item 20
+                        // .ui.dropdown
+                        //     span.text dropdown
+                        //     i.dropdown.icon
+                        //     .menu 
+                        //         +skve k='limit' v=1 l='1'
+                        //         +skve k='limit' v=10 l='10'
+                        //         .item 1
+                        //         .item 5
+                        //         .item 10
+                        //         .item 20
                         
-                        +skve k='profile_section' v='dashboard' l='dashboard' i='dashboard'
-                        +skve k='profile_section' v='friends' l='friends' i='groups'
-                        +skve k='profile_section' v='finance' l='finance' i='money'
-                        +skve k='profile_section' v='posts' l='posts' i='blog'
-                        +skve k='profile_section' v='tribes' l='tribes' i='campfire'
-                        +skve k='profile_section' v='questions' l='questions' i='faq'
-                        +skve k='profile_section' v='answers' l='answers' i='rss'
-                        +skve k='profile_section' v='overlap' l='overlap' i='exchange'
-                        +skve k='profile_section' v='privacy' l='privacy' i='lock'
-                        +skve k='profile_section' v='debits' l='debits' i='initiate-money-transfer'
-                        +skve k='profile_section' v='credits' l='credits' i='deposit'
-                        if skv_is 'profile_section' 'dashboard'
-                            .ui.header #{points_earned}pts earned
-                            +user_dashboard
-                        else if skv_is 'profile_section' 'friends'
-                            .ui.header friends
-                        else if skv_is 'profile_section' 'authored_overlap'
-                            +authored_overlap
-                        else if skv_is 'profile_section' 'debits'
-                            +user_debits
-                        else if skv_is 'profile_section' 'privacy'
-                            +edit_privacy
-                        else if skv_is 'profile_section' 'alerts'
-                            +alerts
-                        else if skv_is 'profile_section' 'finance'
-                            .ui.header finance
+                        // +skve k='profile_section' v='dashboard' l='dashboard' i='dashboard'
+                        // // +skve k='profile_section' v='friends' l='friends' i='groups'
+                        // +skve k='profile_section' v='finance' l='finance' i='money'
+                        // +skve k='profile_section' v='posts' l='posts' i='blog'
+                        // +skve k='profile_section' v='tribes' l='tribes' i='campfire'
+                        // +skve k='profile_section' v='questions' l='questions' i='faq'
+                        // +skve k='profile_section' v='answers' l='answers' i='rss'
+                        // +skve k='profile_section' v='overlap' l='overlap' i='exchange'
+                        // +skve k='profile_section' v='privacy' l='privacy' i='lock'
+                        // +skve k='profile_section' v='debits' l='debits' i='initiate-money-transfer'
+                        // +skve k='profile_section' v='credits' l='credits' i='deposit'
+                        // if skv_is 'profile_section' 'dashboard'
+                        //     .ui.header #{points_earned}pts earned
+                        //     +user_dashboard
+                        // else if skv_is 'profile_section' 'friends'
+                        //     .ui.header friends
+                        // else if skv_is 'profile_section' 'authored_overlap'
+                        //     +authored_overlap
+                        // else if skv_is 'profile_section' 'debits'
+                        //     +user_debits
+                        // else if skv_is 'profile_section' 'privacy'
+                        //     +edit_privacy
+                        // else if skv_is 'profile_section' 'alerts'
+                        //     +alerts
+                        // else if skv_is 'profile_section' 'finance'
+                        //     .ui.header finance
                         +yield
     // +chatpop
               
@@ -165,6 +165,9 @@ template(name='authored_overlap')
 
 
 template(name='user_rentals')
+template(name='user_event  s')
+template(name='user_friends')
+    .ui.header user friends
 template(name='user_dashboard')
     // +user_about
     // .ui.hidden.divider
